main-menu-drop-down.css: Simple skin enhancements and repaired broken css (caused broken teampopup links in my case, might be something completly different for other ppl)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10780 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/main-menu-drop-down.css
+++ b/content/resources/css/main-menu-drop-down.css
@@ -75,6 +75,14 @@ html[data-theme="simple"] ul.ft-drop-down-submenu {
 	padding: 0 5px 5px !important;
 }
 
+html[data-theme="simple"] ul.ft-drop-down-submenu > li > a {
+	/*font-family: Verdana, Tahoma;
+	font-size: 0.69em;*/
+	line-height: 1.3em !important;
+	font-weight: 200  !important;
+}
+
+
 #ft-drop-down-menu li ul {
     display:none;
 }
@@ -196,6 +204,6 @@ ul.ui-tabs-nav, #loading {
 } 
 #fieldOverlay {
 	z-index: 201 !important;	
-
+}
 
 }
